; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_utils.c_fprintf_symbol_filtered.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_utils.c_fprintf_symbol_filtered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_file = type { i32 }

@demangle = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fprintf_symbol_filtered(%struct.ui_file* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.ui_file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.ui_file* %0, %struct.ui_file** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %42

12:                                               ; preds = %4
  %13 = load i32, i32* @demangle, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %12
  %16 = load i8*, i8** %6, align 8
  %17 = load %struct.ui_file*, %struct.ui_file** %5, align 8
  %18 = call i32 @fputs_filtered(i8* %16, %struct.ui_file* %17)
  br label %41

19:                                               ; preds = %12
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @language_def(i32 %20)
  %22 = load i8*, i8** %6, align 8
  %23 = load i32, i32* %8, align 4
  %24 = call i8* @language_demangle(i32 %21, i8* %22, i32 %23)
  store i8* %24, i8** %9, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i8*, i8** %9, align 8
  br label %31

29:                                               ; preds = %19
  %30 = load i8*, i8** %6, align 8
  br label %31

31:                                               ; preds = %29, %27
  %32 = phi i8* [ %28, %27 ], [ %30, %29 ]
  %33 = load %struct.ui_file*, %struct.ui_file** %5, align 8
  %34 = call i32 @fputs_filtered(i8* %32, %struct.ui_file* %33)
  %35 = load i8*, i8** %9, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %37, label %40

37:                                               ; preds = %31
  %38 = load i8*, i8** %9, align 8
  %39 = call i32 @xfree(i8* %38)
  br label %40

40:                                               ; preds = %37, %31
  br label %41

41:                                               ; preds = %40, %15
  br label %42

42:                                               ; preds = %41, %4
  ret void
}

declare dso_local i32 @fputs_filtered(i8*, %struct.ui_file*) #1

declare dso_local i8* @language_demangle(i32, i8*, i32) #1

declare dso_local i32 @language_def(i32) #1

declare dso_local i32 @xfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
